fix main screen to fit correctly on galaxy